--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.4.18",
     "ajv": "^6.5.4",
+    "async": "latest",
     "google-spreadsheet": "^2.0.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "^2.0.5",
-    "async": "latest"
+    "typescript": "^3.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
