--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+src/views/woz/Button.js.map
+src/views/woz/Label.js.map
+src/views/woz/Model.js
+src/views/woz/Model.js.map
+src/views/woz/RegexSearcher.js.map
+src/views/woz/Row.js.map
+src/views/woz/Screen.js.map
+src/views/GoogleSheetController.js.map
+src/App.js.map
