--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.4.18",
+    "@types/react-bootstrap": "^0.32.14",
     "ajv": "^6.5.4",
     "async": "latest",
     "google-spreadsheet": "^2.0.6",
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-scripts": "^2.0.5",
     "typescript": "^3.1.3"
@@ -28,6 +30,5 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "cors": "^2.8.4"
   }
 }
