--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ src/views/woz/Row.js.map
 src/views/woz/Screen.js.map
 src/views/GoogleSheetController.js.map
 src/App.js.map
+src/views/woz/Button.js
+src/views/woz/Label.js
+src/views/woz/RegexSearcher.js
+src/views/woz/Row.js
+src/views/woz/Screen.js
+src/views/GoogleSheetController.js
+src/App.js
