--- a/package.json
+++ b/package.json
@@ -3,22 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.4.18",
-    "@types/react-bootstrap": "^0.32.14",
     "ajv": "^6.5.4",
     "async": "latest",
     "google-spreadsheet": "^2.0.6",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
-    "react-scripts": "^2.0.5",
+    "react-scripts-ts": "^3.1.0",
     "typescript": "^3.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test",
+    "eject": "react-scripts-ts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +28,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react": "^16.4.18",
+    "@types/react-bootstrap": "^0.32.14",
+    "@types/react-dom": "^16.0.9"
   }
 }
