fixing imports and converting utils to TS.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
         "*",
         "compiledTypeScriptFiles/*"
       ]
-    }
+    },
+    "lib": ["dom", "es2018"]
   },
   "exclude": [
     "node_modules"
