--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "woz",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
-    "ajv": "^6.5.4",
-    "async": "latest",
     "google-spreadsheet": "^2.0.6",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "^3.1.0",
-    "typescript": "^3.1.3"
+    "react-scripts-ts": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -28,8 +26,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react": "^16.4.18",
     "@types/react-bootstrap": "^0.32.14",
-    "@types/react-dom": "^16.0.9"
+    "@types/jest": "^23.3.5",
+    "@types/node": "^10.12.0",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "typescript": "^3.1.3"
   }
 }
