--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,21 +6,22 @@
     "sourceMap": true,
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
-    "outDir": "compiledTypeScriptFiles",
+    "outDir": "build/dist",
+    "rootDir": "src",
     "baseUrl": ".",
     "paths": {
       "*": [
         "*",
-        "compiledTypeScriptFiles/*"
+        "build/dist/*"
       ]
     },
-    "lib": ["dom", "es2018"]
+    "lib": ["dom", "es2016", "es2017.object"]
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "build"
   ],
   "include": [
-    "src/**/*",
-    "compiledTypeScriptFiles/**/*"
+    "src/**/*"
   ]
 }
