--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
-    "google-spreadsheet": "^2.0.6",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
@@ -26,10 +25,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react-bootstrap": "^0.32.14",
-    "@types/jest": "^23.3.5",
+    "@types/gapi": "0.0.36",
+    "@types/gapi.auth2": "0.0.47",
+    "@types/gapi.client.sheets": "^4.0.0",
+    "@types/jest": "^23.3.6",
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
+    "@types/react-bootstrap": "^0.32.15",
     "@types/react-dom": "^16.0.9",
     "typescript": "^3.1.3"
   }
