--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "build/dist/*"
       ]
     },
-    "lib": ["dom", "es2016", "es2017.object"]
+    "lib": ["es2017", "esnext.array", "dom"]
   },
   "exclude": [
     "node_modules",
