--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "3.1.0",
-    "winston": "^3.1.0"
+    "react-scripts-ts": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
