--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.5.2",
-    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "semantic-ui-react": "^0.83.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -31,8 +31,8 @@
     "@types/jest": "^23.3.6",
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
-    "@types/react-bootstrap": "^0.32.15",
     "@types/react-dom": "^16.0.9",
+    "semantic-ui-css": "^2.4.1",
     "typescript": "^3.1.3"
   }
 }
