--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@stomp/stompjs": "^5.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "3.1.0",
     "semantic-ui-react": "^0.83.0"
   },
   "scripts": {
@@ -21,7 +20,6 @@
   },
   "browserslist": [
     ">0.2%",
-    "not dead",
     "not ie <= 11",
     "not op_mini all"
   ],
@@ -33,7 +31,9 @@
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "react-scripts-ts": "^3.1.0",
     "semantic-ui-css": "^2.4.1",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "typings-for-css-modules-loader": "^1.7.0"
   }
 }
