--- a/package.json
+++ b/package.json
@@ -5,35 +5,36 @@
   "private": true,
   "dependencies": {
     "@stomp/stompjs": "^5.0.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "semantic-ui-react": "^0.83.0"
+    "babel-preset-react-app": "^5.0.4",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-scripts": "/Users/leuski/Downloads/create-react-app/packages/react-scripts/react-scripts-2.0.5.tgz",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.83.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.3"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test",
-    "eject": "react-scripts-ts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
+    "not dead",
     "not ie <= 11",
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/gapi": "0.0.36",
-    "@types/gapi.auth2": "0.0.47",
+    "@types/gapi": "^0.0.36",
+    "@types/gapi.auth2": "^0.0.48",
     "@types/gapi.client.sheets": "^4.0.0",
-    "@types/jest": "^23.3.6",
-    "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
-    "react-scripts-ts": "^3.1.0",
-    "semantic-ui-css": "^2.4.1",
-    "typescript": "^3.1.3",
-    "typings-for-css-modules-loader": "^1.7.0"
+    "cross-env": "^5.2.0"
   }
 }
