--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,36 @@
 {
   "compilerOptions": {
-//    "module": "commonjs",
-    "target": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "jsx": "react",
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "build/dist",
-    "rootDir": "src",
-    "baseUrl": ".",
-    "paths": {
-      "*": [
-        "*",
-        "build/dist/*"
-      ]
-    },
-    "lib": ["es2017", "esnext.array", "dom"],
     "alwaysStrict": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "lib": [
+      "es2017",
+      "ESNext.array",
+      "dom"
+    ],
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "outDir": "build/dist",
+    "resolveJsonModule": true,
+    "rootDir": "src",
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
-    "strictPropertyInitialization": true
+    "strictPropertyInitialization": true,
+    "target": "es6"
   },
   "exclude": [
     "config",
