--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "xlsx": "^0.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
