--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "private": true,
   "dependencies": {
     "@stomp/stompjs": "^5.0.0",
-    "babel-preset-react-app": "^5.0.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "/Users/leuski/Downloads/create-react-app/packages/react-scripts/react-scripts-2.0.5.tgz",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
     "tslint": "^5.11.0",
@@ -17,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf dist && mkdir -p dist && mv build dist/woz",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
