--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "dependencies": {
     "@stomp/stompjs": "^5.0.0",
+    "@types/google-protobuf": "^3.2.7",
+    "google-protobuf": "^3.6.1",
+    "grpc-web": "^1.0.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "semantic-ui-css": "^2.4.1",
@@ -34,6 +37,7 @@
     "@types/gapi.client.sheets": "^4.0.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "react-scripts": "2.1.0"
   }
 }
