--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "outDir": "build/dist",
     "resolveJsonModule": true,
