--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
-    "@stomp/stompjs": "^5.0.0",
+    "@stomp/stompjs": "^5.3.0",
     "@types/google-protobuf": "^3.2.7",
-    "google-protobuf": "^3.6.1",
-    "grpc-web": "^1.0.3",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "google-protobuf": "^3.7.1",
+    "grpc-web": "^1.0.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.83.0",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.3",
-    "xlsx": "^0.14.0"
+    "semantic-ui-react": "^0.86.0",
+    "tslint": "^5.16.0",
+    "typescript": "3.4.3",
+    "uuid": "^3.3.2",
+    "xlsx": "^0.14.2"
   },
   "scripts": {
     "start": "node scripts/generate-build.js ${npm_package_version} && react-scripts start",
@@ -33,11 +34,12 @@
   ],
   "devDependencies": {
     "@types/gapi": "^0.0.36",
-    "@types/gapi.auth2": "^0.0.48",
-    "@types/gapi.client.sheets": "^4.0.0",
-    "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
+    "@types/gapi.auth2": "^0.0.50",
+    "@types/gapi.client.sheets": "^4.0.1",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.4",
+    "@types/uuid": "^3.4.4",
     "cross-env": "^5.2.0",
-    "react-scripts": "2.1.0"
+    "react-scripts": "2.1.8"
   }
 }
