--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@stomp/stompjs": "^5.3.0",
     "@types/google-protobuf": "^3.2.7",
+    "@types/lunr": "^2.3.2",
     "google-protobuf": "^3.7.1",
     "grpc-web": "^1.0.4",
+    "lunr": "^2.3.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "semantic-ui-css": "^2.4.1",
