Fixing a regression in the last build where a spreadsheet with just "buttons" and "rows" sheets will not be recognized. Fixing a React warning on startup.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "node scripts/generate-build.js ${npm_package_version} && react-scripts start",
-    "build": "node scripts/generate-build.js ${npm_package_version} && react-scripts build && rm -rf dist && mkdir -p dist && mv build dist/woz",
+    "build": "node scripts/generate-build.js ${npm_package_version} && react-scripts build && rm -rf dist && mkdir -p dist && mv build dist/woz && upload.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
