--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "@stomp/stompjs": "^5.4.4",
     "@types/google-protobuf": "^3.7.2",
     "@types/lunr": "^2.3.3",
-    "google-protobuf": "^3.12.2",
+    "google-protobuf": "^4.0.0-rc.2",
     "grpc-web": "^1.2.0",
     "lunr": "^2.3.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
+    "semantic-ui-react": "^1.0.0",
     "tslint": "^6.1.2",
-    "typescript": "3.9.6",
-    "uuid": "^8.2.0",
-    "xlsx": "^0.16.3"
+    "typescript": "3.9.7",
+    "uuid": "^8.3.0",
+    "xlsx": "^0.16.4"
   },
   "scripts": {
     "start": "node scripts/generate-build.js ${npm_package_version} && react-scripts start",
