--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
-    "@stomp/stompjs": "^5.4.4",
-    "@types/google-protobuf": "^3.7.2",
+    "@stomp/stompjs": "^6.1.0",
+    "@types/google-protobuf": "^3.15.2",
     "@types/lunr": "^2.3.3",
-    "google-protobuf": "^4.0.0-rc.2",
-    "grpc-web": "^1.2.0",
-    "lunr": "^2.3.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "google-protobuf": "3.15.8",
+    "grpc-web": "^1.2.1",
+    "lunr": "^2.3.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.0.0",
-    "tslint": "^6.1.2",
-    "typescript": "3.9.7",
-    "uuid": "^8.3.0",
-    "xlsx": "^0.16.4"
+    "semantic-ui-react": "^2.0.3",
+    "typescript": "4.2.4",
+    "uuid": "^8.3.2",
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "start": "node scripts/generate-build.js ${npm_package_version} && react-scripts start",
@@ -35,13 +34,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/helper-regex": "^7.10.5",
     "@types/gapi": "^0.0.39",
-    "@types/gapi.auth2": "^0.0.52",
-    "@types/gapi.client.sheets": "^4.0.9",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
-    "@types/uuid": "^8.0.0",
-    "cross-env": "^7.0.2",
-    "react-scripts": "3.4.1"
+    "@types/gapi.auth2": "^0.0.54",
+    "@types/gapi.client.sheets": "^4.0.20201029",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
+    "@types/uuid": "^8.3.0",
+    "cross-env": "^7.0.3",
+    "react-scripts": "4.0.3"
   }
 }
