--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/helper-define-map": "^7.13.12",
     "@babel/helper-regex": "^7.10.5",
     "@types/gapi": "^0.0.39",
     "@types/gapi.auth2": "^0.0.54",
@@ -41,7 +42,16 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "cross-env": "^7.0.3",
-    "react-scripts": "4.0.3"
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsdoc": "^33.0.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "prettier-eslint": "^12.0.0",
+    "react-scripts": "4.0.3",
+    "tslint-to-eslint-config": "^2.3.0"
   }
 }
