--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "jsx": "react-jsx",
     "lib": [
       "es2017",
-      "esnext.array",
+      "esnext",
       "dom"
     ],
     "module": "ESNext",
